# discordcat

./: Cargo.toml  Makefile  README.md  release.sh
.github/workflows/: ci.yml
script/: release
src/: main.rs
