[package]
name = "discordcat"
version = "0.2.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"
description = "CLI utility to post files and command output to discord"
repository = "https://github.com/k-nasa/discordcat"
license-file = "LICENSE"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["discord", "discordcat", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
anyhow = "1.0.32"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.57"
